--- a/client-server/views/index.ejs
+++ b/client-server/views/index.ejs
@@ -818,6 +818,7 @@
 
 </div>
 <script src="classes/utils.js"></script>
+<script src="classes/HttpRequest.js"></script>
 <script src="models/User.js"></script>
 <script src="controller/UserController.js"></script>
 <script src="index.js"></script>
